--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,13 +1,14 @@
 @import "../../build/css/bootstrap.min.css";
 @font-face { font-family: ProximaNova;  src: url(../fonts/proxima-nova-regular.otf); }
 @font-face { font-family: ProximaNovaBold;  src: url(../fonts/proxima-nova-bold.otf); }
+@font-face { font-family: Ubuntu;  src: url(../fonts/ubuntu-bold.ttf); }
 header {
   padding-top: 28px;
-  height: 700px;
+  height: 830px;
   width: 100%;
   margin: 0 auto;
   color: #fff;
-  background-image: url(../img/bg-header.png);
+  background-image: url(../img/bg-header-after.png);
   background-position: center center;
   .nav-sections {
     max-width: 1200px;
@@ -45,7 +46,13 @@ header {
         li {
           a {
             text-decoration: none;
-            color: inherit;
+            color: #fff;
+            &:hover {
+              color: #FCCE17;
+            }
+            &:active {
+              color: darken(#FCCE17, 10%);
+            }
           }
         }
       }
@@ -78,11 +85,113 @@ header {
     }
   }
   .header-block {
-    width: 80vw;
     margin: 115px auto;
+    max-width: 1170px;
+    padding: 0px 15px;
     .header-text {
+      height: 200px;
       margin-top: 0;
-      background-image: url(../img/text-header.svg);
+      background-image: url(../img/text-header.png);
+      background-repeat: no-repeat;
+      margin-bottom: 30px;
+    }
+    p {
+      width: 400px;
+      font-size: 24.413px;
+      font-family: ProximaNova;
+      color: #fff;
+      font-weight: bold;
+      line-height: 1.2;
+      letter-spacing: 1px;
+    }
+  }
+  .header-pay {
+    margin-top: 45px;
+    margin-left: 25px;
+    width: 440px;
+    height: 50px;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    &:hover {
+      opacity: 0.9;
+    }
+    &:active {
+      opacity: 1;
+    }
+    .pay-button {
+      &:before {
+        content: '';
+        height: 50px;
+        width: 50px;
+        display: block;
+        background-color: #fff;
+        border-radius: 50px;
+        margin-left: -25px;
+        position: absolute;
+        background-image: url(../img/icon-pay.svg);
+        background-position: 8px 10px;
+        background-repeat: no-repeat;
+      }
+      font-size: 16px;
+      font-family: Ubuntu;
+      font-weight: bold;
+      line-height: 3;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      padding-right: 25px;
+      text-align: right;
+      width: 230px;
+      float: left;
+      height: 100%;
+      background-color: #ff1a3a;
+      color: #fff;
+      z-index: 1;
+      position: relative;
+      border-radius: 0px 50px 50px 0px;
+    }
+    .pay-bonus {
+      font-size: 16px;
+      font-family: Ubuntu;
+      font-weight: bold;
+      line-height: 1;
+      text-transform: uppercase;
+      margin-top: -50px;
+      position: relative;
+      padding-top: 9px;
+      padding-left: 50px;
+      float: right;
+      width: 250px;
+      text-align: left;
+      height: 100%;
+      background-color: #fff;
+      color: #ff1a3a;
+      z-index: 0;
+      border-radius: 0px 50px 50px 0px;
+    }
+  }
+  .pay-form {
+    height: 290px;
+    padding: 0px 15px;
+    background-color: #50c3ff;
+    margin-top: -150px;
+    z-index: 2;
+    border-radius: 5px;
+    display: none;
+    .pay-form-close {
+      background-image: url(../img/x-letter.svg);
+      background-size: 100%;
+      position: absolute;
+      right: 15px;
+      top: 15px;
+      width: 20px;
+      height: 20px;
+      cursor: pointer;
+      &:active {
+        opacity: 0.8;
+      }
     }
   }
 }
