--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,7 +12,6 @@ header {
   background-position: center center;
   .nav-sections {
     max-width: 1200px;
-    padding: 0 15px;
     margin: 0 auto;
     letter-spacing: 1px;
     font-weight: bold;
@@ -87,7 +86,6 @@ header {
   .header-block {
     margin: 115px auto;
     max-width: 1170px;
-    padding: 0px 15px;
     .header-text {
       height: 200px;
       margin-top: 0;
@@ -106,6 +104,7 @@ header {
     }
   }
   .header-pay {
+
     margin-top: 45px;
     margin-left: 25px;
     width: 440px;
@@ -173,13 +172,49 @@ header {
     }
   }
   .pay-form {
-    height: 290px;
-    padding: 0px 15px;
+    h2 {
+      font-size: 26px;
+      font-family: ProximaNova;
+      font-weight: bold;
+      letter-spacing: 3px;
+      line-height: 1.2;
+      width: 260px;
+      text-align: left;
+      color: #fff;
+      margin-top: 47px;
+      margin-bottom: 42px;
+      text-transform: uppercase;
+      margin-left: 48px;
+      &:before {
+        content: '';
+        width: 45px;
+        height: 35px;
+        margin-left: -51px;
+        margin-top: -8px;
+        position: absolute;
+        background-image: url(../img/icon-pay-white.svg);
+        background-position: 8px 10px;
+        background-repeat: no-repeat;
+      }
+    }
+    min-height: 290px;
     background-color: #50c3ff;
     margin-top: -150px;
     z-index: 2;
     border-radius: 5px;
-    display: none;
+    color: #2e2e2e;
+    font-size: 13px;
+    font-family: ProximaNova;
+    color: rgb(46, 46, 46);
+    font-weight: bold;
+    text-align: right;
+    form {
+      display: flex;
+      justify-content: space-around;
+      margin-left: -10px;
+      margin-top: 0px;
+    }
+    //display: none;
     .pay-form-close {
       background-image: url(../img/x-letter.svg);
       background-size: 100%;
@@ -191,6 +226,84 @@ header {
       cursor: pointer;
       &:active {
         opacity: 0.8;
+      }
+    }
+    select {
+      outline: none;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
+      background: url(../img/icon-dropdown.svg) 96% 55% no-repeat #fff;
+      background-size: 10px;
+      option {
+
+      }
+    }
+    select, input {
+      min-width: 170px;
+      height: 55px;
+      border-radius: 5px;
+      border: none;
+      padding: 0 80px 0 15px;
+      margin: 0 15px;
+      cursor: pointer;
+    }
+
+    #datepicker {
+      padding: 0 25px 0 15px;
+      &:focus {
+        color: lighten(#000, 80%);
+      }
+    }
+    .pay-form-submit {
+      cursor: pointer;
+      -webkit-appearance: none;
+      border-radius: 23px;
+      background-color: #FF1A3A;
+      width: 230px;
+      height: 50px;
+      display: block;
+      margin-right: 20px;
+      margin-left: 15px;
+      color: #fff;
+      line-height: 3.2;
+      padding-right: 20px;
+      font-size: 16px;
+      font-family: ProximaNova;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      &:hover {
+        opacity: 0.9;
+      }
+      &:active {
+        opacity: 1;
+      }
+      &:before {
+        content: '';
+        border-radius: 50%;
+        background-color: #fff;
+        box-shadow: 0px 10px 15px 0px rgba(48, 48, 49, 0.2);
+        width: 50px;
+        height: 50px;
+        background-image: url(../img/icon-block.svg);
+        background-repeat: no-repeat;
+        background-position: 15px 11px;
+        position: absolute;
+        margin-left: -66px;
+      }
+    }
+    .form-description {
+      text-align: left;
+      width: auto;
+      color: #fff;
+      margin-left: -8px;
+      margin-top: 17px;
+      letter-spacing: .5px;
+      span:nth-child(2) {
+        margin-left: -15px;
+      }
+      span:nth-child(3), span:nth-child(4) {
+        margin-left: 10px;
       }
     }
   }
